--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header class="header">
     <nav class="nav">
         <a href="index.html" class="logo">
-            <img src="FBLA PROJECT FINAL/Images/West-MEC-logo.png" alt="West-MEC Logo">
+            <img src="./FBLA PROJECT FINAL/Images/West-MEC-logo.png" alt="West-MEC Logo">
             <span class="title">West-MEC Lost & Found</span>
         </a>
 
@@ -29,10 +29,10 @@
 
         <ul class="menu">
             <li><a href="/index.html" class="menu-link active">Home</a></li>
-            <li><a href="/FBLA PROJECT FINAL/report.html" class="menu-link">Report</a></li>
-            <li><a href="/FBLA PROJECT FINAL/search.html" class="menu-link">Browse</a></li>
-            <li><a href="/FBLA PROJECT FINAL/claim.html" class="menu-link">Claim</a></li>
-            <li><a href="/FBLA PROJECT FINAL/adminlogin.html" class="menu-link">Admin</a></li>
+            <li><a href="./FBLA PROJECT FINAL/report.html" class="menu-link">Report</a></li>
+            <li><a href="./FBLA PROJECT FINAL/search.html" class="menu-link">Browse</a></li>
+            <li><a href="./FBLA PROJECT FINAL/claim.html" class="menu-link">Claim</a></li>
+            <li><a href="./FBLA PROJECT FINAL/adminlogin.html" class="menu-link">Admin</a></li>
         </ul>
     </nav>
 </header>
@@ -41,7 +41,7 @@
 
 <!-- hero -->
 <section class="hero">
-    <img src="/FBLA PROJECT FINAL/Images/Orange-Blob-Central.png" alt="West-MEC Central">
+    <img src="./FBLA PROJECT FINAL/Images/Orange-Blob-Central.png" alt="West-MEC Central">
 
     <div class="hero-box">
         <h1>Find What Matters</h1>
@@ -79,7 +79,7 @@
 <!-- mission -->
 <section class="mission">
     <div class="mission-img">
-        <img src="/FBLA PROJECT FINAL/Images/Westley-Point_2.png" alt="Westley">
+        <img src="./FBLA PROJECT FINAL/Images/Westley-Point_2.png" alt="Westley">
     </div>
 
     <div class="mission-box">
@@ -100,19 +100,19 @@
         <div class="how-card">
             <h3>Report</h3>
             <p>Found something? Report it.</p>
-            <a href="/FBLA PROJECT FINAL/report.html" class="btn btn-outline">Report</a>
+            <a href="./FBLA PROJECT FINAL/report.html" class="btn btn-outline">Report</a>
         </div>
 
         <div class="how-card">
             <h3>Browse</h3>
             <p>Look through found items.</p>
-            <a href="/FBLA PROJECT FINAL/search.html" class="btn btn-outline">Browse</a>
+            <a href="./FBLA PROJECT FINAL/search.html" class="btn btn-outline">Browse</a>
         </div>
 
         <div class="how-card">
             <h3>Claim</h3>
             <p>Verify ownership and get it back.</p>
-            <a href="/FBLA PROJECT FINAL/claim.html" class="btn btn-outline">Claim</a>
+            <a href="./FBLA PROJECT FINAL/claim.html" class="btn btn-outline">Claim</a>
         </div>
     </div>
 </section>
@@ -138,7 +138,7 @@
     </form>
 
     <div class="contact-img">
-        <img src="/FBLA PROJECT FINAL/Images/thank-you.png" alt="Thank You">
+        <img src="./FBLA PROJECT FINAL/Images/thank-you.png" alt="Thank You">
     </div>
 </section>
 
@@ -151,7 +151,7 @@
         <!-- Brand / Logo -->
         <div class="footer-section footer-brand">
             <a href="index.html" target="_blank" class="footer-brand-logo">
-                <img src="/FBLA PROJECT FINAL/Images/Arrow.png" alt="West-MEC Website image">
+                <img src="./FBLA PROJECT FINAL/Images/Arrow.png" alt="West-MEC Website image">
             </a>
 
             <div class="footer-brand-text">
@@ -165,10 +165,10 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/FBLA PROJECT FINAL/search.html">Browse Items</a></li>
-                <li><a href="/FBLA PROJECT FINAL/report.html">Report Item</a></li>
-                <li><a href="/FBLA PROJECT FINAL/claim.html">Claim Item</a></li>
-                <li><a href="/FBLA PROJECT FINAL/terms.html">Terms of Service</a></li>
+                <li><a href="./FBLA PROJECT FINAL/search.html">Browse Items</a></li>
+                <li><a href="./FBLA PROJECT FINAL/report.html">Report Item</a></li>
+                <li><a href="./FBLA PROJECT FINAL/claim.html">Claim Item</a></li>
+                <li><a href="./FBLA PROJECT FINAL/terms.html">Terms of Service</a></li>
             </ul>
         </div>
 
@@ -176,7 +176,7 @@
         <div class="footer-section">
             <h3>Admin</h3>
             <ul>
-                <li><a href="adminlogin.html">Admin Login</a></li>
+                <li><a href="./FBLA PROJECT FINAL/adminlogin.html">Admin Login</a></li>
             </ul>
         </div>
 
@@ -196,4 +196,5 @@
 </footer>
 </body>
 </html>
+
 
