--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="./FBLA-PROJECT-FINAL/search.html">Browse Items</a></li>
                 <li><a href="./FBLA-PROJECT-FINAL/report.html">Report Item</a></li>
                 <li><a href="./FBLA-PROJECT-FINAL/claim.html">Claim Item</a></li>
@@ -196,5 +196,6 @@
 </footer>
 </body>
 </html>
+
 
 
