Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <ul class="menu">
-            <li><a href="/index.html" class="menu-link active">Home</a></li>
+            <li><a href="index.html" class="menu-link active">Home</a></li>
             <li><a href="./FBLA-PROJECT-FINAL/report.html" class="menu-link">Report</a></li>
             <li><a href="./FBLA-PROJECT-FINAL/search.html" class="menu-link">Browse</a></li>
             <li><a href="./FBLA-PROJECT-FINAL/claim.html" class="menu-link">Claim</a></li>
@@ -164,7 +164,7 @@
         <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="./FBLA-PROJECT-FINAL/search.html">Browse Items</a></li>
                 <li><a href="./FBLA-PROJECT-FINAL/report.html">Report Item</a></li>
                 <li><a href="./FBLA-PROJECT-FINAL/claim.html">Claim Item</a></li>
@@ -196,6 +196,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
