Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </div>
 
     <div class="hero-buttons">
-        <a href="search.html" class="btn btn-main">Browse Items</a>
-        <a href="report.html" class="btn btn-dark">Report Item</a>
+        <a href="./FBLA-PROJECT-FINAL/search.html" class="btn btn-main">Browse Items</a>
+        <a href="./FBLA-PROJECT-FINAL/report.html" class="btn btn-dark">Report Item</a>
     </div>
 </section>
 
@@ -196,6 +196,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
