--- a/FBLA-PROJECT-FINAL/claim.html
+++ b/FBLA-PROJECT-FINAL/claim.html
@@ -6,9 +6,9 @@
     <title>Claim Page</title>
 
     <!-- Home Header Styles -->
-    <link rel="icon" type="image/png" href="/FBLA-PROJECT-FINAL/Images/Arrow.png">
-    <link rel="stylesheet" href="/FBLA-PROJECT-FINAL/CSS-Style-Sheets/claim-style.css">
-    <script src="/FBLA-PROJECT-FINAL/JavaScript-Files/claim-script.js" defer></script>
+    <link rel="icon" type="image/png" href="Images/Arrow.png">
+    <link rel="stylesheet" href="CSS-Style-Sheets/claim-style.css">
+    <script src="JavaScript-Files/claim-script.js" defer></script>
     <meta name="description" content="Claim an item in the West-MEC Lost & Found system. Provide your personal and contact information to retrieve your lost belongings.">
 </head>
 <body>
@@ -17,7 +17,7 @@
 <header class="header">
     <nav class="nav">
         <a href="../index.html" class="logo">
-            <img src="/FBLA-PROJECT-FINAL/Images/West-MEC-logo.png" alt="West-MEC Logo">
+            <img src="Images/West-MEC-logo.png" alt="West-MEC Logo">
             <span class="title">West-MEC Lost & Found</span>
         </a>
 
@@ -30,10 +30,10 @@
 
         <ul class="menu">
             <li><a href="../index.html" class="menu-link">Home</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/report.html" class="menu-link">Report</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/search.html" class="menu-link">Browse</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/claim.html" class="menu-link active">Claim</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/adminlogin.html" class="menu-link">Admin</a></li>
+            <li><a href="report.html" class="menu-link">Report</a></li>
+            <li><a href="search.html" class="menu-link">Browse</a></li>
+            <li><a href="claim.html" class="menu-link active">Claim</a></li>
+            <li><a href="adminlogin.html" class="menu-link">Admin</a></li>
         </ul>
     </nav>
 </header>
@@ -175,7 +175,7 @@
         <!-- Brand / Logo -->
         <div class="footer-section footer-brand">
             <a href="../index.html" target="_blank" class="footer-brand-logo">
-                <img src="/FBLA-PROJECT-FINAL/Images/Arrow.png" alt="West-MEC Website image">
+                <img src="Images/Arrow.png" alt="West-MEC Website image">
             </a>
 
             <div class="footer-brand-text">
@@ -189,10 +189,10 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/search.html">Browse Items</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/report.html">Report Item</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/claim.html">Claim Item</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/terms.html">Terms of Service</a></li>
+                <li><a href="search.html">Browse Items</a></li>
+                <li><a href="report.html">Report Item</a></li>
+                <li><a href="claim.html">Claim Item</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
             </ul>
         </div>
 
@@ -200,7 +200,7 @@
         <div class="footer-section">
             <h3>Admin</h3>
             <ul>
-                <li><a href="/FBLA-PROJECT-FINAL/adminlogin.html">Admin Login</a></li>
+                <li><a href="adminlogin.html">Admin Login</a></li>
             </ul>
         </div>
 
@@ -231,3 +231,4 @@ function getMapImage() {
 </main>
 </body>
 </html>
+
