--- a/FBLA-PROJECT-FINAL/terms.html
+++ b/FBLA-PROJECT-FINAL/terms.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>West-MEC Lost & Found - Terms of Service</title>
-<link rel="stylesheet" href="/FBLA-PROJECT-FINAL/CSS-Style-Sheets/terms-style.css">
-<link rel="icon" type="image/png" href="/FBLA-PROJECT-FINAL/Images/Arrow.png">
-<script src="/FBLA-PROJECT-FINAL/JavaScript-Files/terms.js" defer></script>
+<link rel="stylesheet" href="CSS-Style-Sheets/terms-style.css">
+<link rel="icon" type="image/png" href="Images/Arrow.png">
+<script src="JavaScript-Files/terms.js" defer></script>
 <meta name="description" content="Terms of Service for West-MEC Lost & Found system. Understand the rules and guidelines for using our lost and found services.">
 </head>
 
@@ -15,7 +15,7 @@
 <header class="header">
     <nav class="nav">
         <a href="../index.html" class="logo">
-            <img src="/FBLA-PROJECT-FINAL/Images/West-MEC-logo.png" alt="West-MEC Logo">
+            <img src="Images/West-MEC-logo.png" alt="West-MEC Logo">
             <span class="title">West-MEC Lost & Found</span>
         </a>
 
@@ -28,10 +28,10 @@
 
         <ul class="menu">
             <li><a href="../index.html" class="menu-link">Home</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/report.html" class="menu-link">Report</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/search.html" class="menu-link">Browse</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/claim.html" class="menu-link">Claim</a></li>
-            <li><a href="/FBLA-PROJECT-FINAL/adminlogin.html" class="menu-link">Admin</a></li>
+            <li><a href="report.html" class="menu-link">Report</a></li>
+            <li><a href="search.html" class="menu-link">Browse</a></li>
+            <li><a href="claim.html" class="menu-link">Claim</a></li>
+            <li><a href="adminlogin.html" class="menu-link">Admin</a></li>
         </ul>
     </nav>
 </header>
@@ -97,7 +97,7 @@
         <!-- Brand / Logo -->
         <div class="footer-section footer-brand">
             <a href="../index.html" target="_blank" class="footer-brand-logo">
-                <img src="/FBLA-PROJECT-FINAL/Images/Arrow.png" alt="West-MEC Website image">
+                <img src="Images/Arrow.png" alt="West-MEC Website image">
             </a>
 
             <div class="footer-brand-text">
@@ -111,10 +111,10 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/search.html">Browse Items</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/report.html">Report Item</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/claim.html">Claim Item</a></li>
-                <li><a href="/FBLA-PROJECT-FINAL/terms.html">Terms of Service</a></li>
+                <li><a href="search.html">Browse Items</a></li>
+                <li><a href="report.html">Report Item</a></li>
+                <li><a href="claim.html">Claim Item</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
             </ul>
         </div>
 
@@ -122,7 +122,7 @@
         <div class="footer-section">
             <h3>Admin</h3>
             <ul>
-                <li><a href="/FBLA-PROJECT-FINAL/adminlogin.html">Admin Login</a></li>
+                <li><a href="adminlogin.html">Admin Login</a></li>
             </ul>
         </div>
 
@@ -142,3 +142,4 @@
 </footer>
 </body>
 </html>
+
