Fix HTML formatting in terms.html

--- a/FBLA-PROJECT-FINAL/terms.html
+++ b/FBLA-PROJECT-FINAL/terms.html
@@ -101,7 +101,7 @@
             </a>
 
             <div class="footer-brand-text">
-                <h2>West-MEC Lost & Found</h2>
+                <h2 style="color:white;">West-MEC Lost & Found</h2>
                 <p>Helping students and staff reconnect with their lost belongings.</p>
             </div>
         </div>
@@ -137,9 +137,10 @@
     </div>
 
     <div class="footer-bottom">
-        <p>© 2025 West-MEC Students — All Rights Reserved</p>
+        <p style="color:white;">© 2025 West-MEC Students — All Rights Reserved</p>
     </div>
 </footer>
 </body>
 </html>
+
 
