Fix HTML formatting and encoding issues

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <!-- hero -->
 <section class="hero">
-    <img src="./FBLA-PROJECT-FINAL/Images/Orange-Blob-Central.png" alt="West-MEC Central">
+    <img src="./FBLA-PROJECT-FINAL/Images/Orange-Blob-Central.png" alt="West-MEC Central" fetchPriority="high">
 
     <div class="hero-box">
         <h1>Find What Matters</h1>
@@ -196,6 +196,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
