--- a/FBLA-PROJECT-FINAL/signup.html
+++ b/FBLA-PROJECT-FINAL/signup.html
@@ -55,10 +55,10 @@
       </select>
       <div class="tos-check">
         <input type="checkbox" id="agree" name="agree" required>
-        <label for="agree">I agree to the <a href="/FBLA-PROJECT-FINAL/terms.html" target="_blank">Terms of Service</a></label>
+        <label for="agree">I agree to the <a href="terms.html" target="_blank">Terms of Service</a></label>
       </div>
       <button type="submit">Create Account</button>
-      <div class="login-link">Already have an account? <a href="/FBLA-PROJECT-FINAL/adminlogin.html">Login here</a></div>
+      <div class="login-link">Already have an account? <a href="adminlogin.html">Login here</a></div>
     </form>
   </div>
 <hr>
@@ -114,4 +114,5 @@
 </footer>
 </body>
 </html>
+
 
