--- a/FBLA-PROJECT-FINAL/signup.html
+++ b/FBLA-PROJECT-FINAL/signup.html
@@ -30,7 +30,7 @@
             <li><a href="report.html" class="menu-link">Report</a></li>
             <li><a href="search.html" class="menu-link">Browse</a></li>
             <li><a href="claim.html" class="menu-link">Claim</a></li>
-            <li><a href="adminlogin.html" class="menu-link">Admin</a></li>
+            <li><a href="adminlogin.html" class="menu-link active">Admin</a></li>
         </ul>
     </nav>
 </header>
@@ -114,5 +114,6 @@
 </footer>
 </body>
 </html>
+
 
 
