Fix HTML encoding issues in dash.html

--- a/FBLA-PROJECT-FINAL/dash.html
+++ b/FBLA-PROJECT-FINAL/dash.html
@@ -30,7 +30,7 @@
             <li><a href="report.html" class="menu-link">Report</a></li>
             <li><a href="search.html" class="menu-link">Browse</a></li>
             <li><a href="claim.html" class="menu-link">Claim</a></li>
-            <li><a href="adminlogin.html" class="menu-link">Admin</a></li>
+            <li><a href="adminlogin.html" class="menu-link active">Admin</a></li>
         </ul>
     </nav>
 </header>
@@ -233,4 +233,5 @@
     </script>
   </body>
 </html>
+
 
