--- a/FBLA-PROJECT-FINAL/report.html
+++ b/FBLA-PROJECT-FINAL/report.html
@@ -47,9 +47,9 @@
         <h3 class="lheader">Name</h3>
         <div class="name-input">
             <label for="fname">First Name:</label>
-            <input type="text" id="fname" name="fname" placeholder="...">
+            <input type="text" id="fname" name="fname" placeholder="..." required>
             <label for="lname">Last Name:</label>
-            <input type="text" id="lname" name="lname" placeholder="...">
+            <input type="text" id="lname" name="lname" placeholder="..." required>
         </div>
 
         <h4 class="lheader">Campus</h4>
@@ -113,24 +113,24 @@
         <h2 class="mheader">Contact Information</h2>
         <div class="email-input">
             <label>Email:</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com">
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
         </div>
         <div class="phone-input">
             <label>Phone Number:</label>
-            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890">
         </div>
 
         <h3 class="mheader">Item Info</h3>
         <div class="date-found-input">
             <label>Date Lost:</label>
-            <input type="date" id="datemin" name="datemin" min="2018-01-01">
+            <input type="date" id="datemin" name="datemin" min="2018-01-01" required>
         </div>
         <div class="item-found-input">
             <label>Item:</label>
-             <input type="text" id="found" name="found" placeholder="...">
+             <input type="text" id="found" name="found" placeholder="..." required>
         </div>
         <div class="found-item-img-input">
-        <label for="myfile">Upload Image</label>
+        <label for="myfile">Upload Image - ( Highly Recommended)</label>
         <input 
             type="file" 
             id="myfile"
@@ -220,6 +220,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
