--- a/index.html
+++ b/index.html
@@ -129,10 +129,12 @@
                value="3ec01063-88a9-4401-b117-2b6676b555eb">
 
         <h2 id="contact">Contact Us</h2>
-
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message"></textarea>
+        <label for="name">Your Name</label>
+        <input type="text"  id="name" name="name" required>
+        <label for="email">Your email</label>
+        <input type="email"  id="email" name="email" required>
+        <label for="message">Your Message</label>
+        <textarea name="message" id="message"></textarea>
 
         <button type="submit" class="btn btn-main" id="submit-btn">Submit</button>
     </form>
@@ -196,6 +198,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
