--- a/FBLA-PROJECT-FINAL/report.html
+++ b/FBLA-PROJECT-FINAL/report.html
@@ -143,18 +143,18 @@
         <div class="item-found-category">
             <label for="category">Category</label>
             <select name="category" id="category">
-                <option value="Electronic">Electronics</option>
-                <option value="Bags">Bags & Backpacks</option>
+                <option value="Electronics">Electronics</option>
+                <option value="Books">Bags & Backpacks</option>
                 <option value="Clothing">Clothing</option>
-                <option value="Shoes">Shoes</option>
-                <option value="Keys">Keys & Keychains</option>
-                <option value="Supplies">Books & School Supplies</option>
-                <option value="Lunch">Water Bottles & Lunch Items</option>
-                <option value="Accesories">Accesories</option>
-                <option value="Wallet-ID">Wallets & ID Cards</option>
-                <option value="Headphones">Headphones</option>
-                <option value="Personal">Personal Items</option>
-                <option value="Equipment">Equipment</option>
+                <option value="Clothing">Shoes</option>
+                <option value="Accessories">Keys & Keychains</option>
+                <option value="Books">Books & School Supplies</option>
+                <option value="Other">Water Bottles & Lunch Items</option>
+                <option value="Accessories">Accesories</option>
+                <option value="Accessories">Wallets & ID Cards</option>
+                <option value="Accessories">Headphones</option>
+                <option value="Other">Personal Items</option>
+                <option value="Other">Equipment</option>
                 <option value="Other">Other</option>
             </select>
         </div>
@@ -220,6 +220,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
