Fix HTML formatting in adminlogin.html

--- a/FBLA-PROJECT-FINAL/adminlogin.html
+++ b/FBLA-PROJECT-FINAL/adminlogin.html
@@ -47,7 +47,7 @@
 
       <button type="submit">Login</button>
 
-      <p class="demo-text">Demo: USER / PASS</p>
+      <p class="demo-text"></p>
 
       <div class="signup-link">Don’t have an account? <a href="signup.html">Sign up here</a></div>
     </form>
@@ -105,5 +105,6 @@
 </footer>
 </body>
 </html>
+
 
 
