Fix HTML formatting and structure in claim.html

--- a/FBLA-PROJECT-FINAL/claim.html
+++ b/FBLA-PROJECT-FINAL/claim.html
@@ -86,7 +86,7 @@
         </div>
 
         <button type="button" onclick="return getMapImage();" class="campusButton">Get Campus Map</button>
-        <div id="showMap" class="lheader">(On the map, click where you last had your item.)</div>
+        <div id="showMap" class="lheader"></div>
 
         <h4 class="lheader">Program</h4>
         <div class="program-select">
@@ -221,5 +221,6 @@
 </main>
 </body>
 </html>
+
 
 
